[gd_scene load_steps=29 format=3 uid="uid://bslg8ghj3valg"]

[ext_resource type="Script" path="res://scripts/todoItemArea/todoItemArea.gd" id="2_0nue1"]
[ext_resource type="Script" path="res://scripts/main/initManager.gd" id="2_411ek"]
[ext_resource type="Theme" uid="uid://4n68pb8tm75j" path="res://others/theme/Light/light_globa.tres" id="2_bm743"]
[ext_resource type="StyleBox" uid="uid://5bio58gaq10k" path="res://others/theme/Light/light_leftMenu.tres" id="2_rxhw4"]
[ext_resource type="Script" path="res://scripts/leftMenu/leftMenu.gd" id="3_7p4oc"]
[ext_resource type="Script" path="res://scripts/window/appController.gd" id="3_qwv7e"]
[ext_resource type="ButtonGroup" uid="uid://bgw5cquep7q1w" path="res://others/buttonGroup/listGroup.tres" id="3_ut62r"]
[ext_resource type="Script" path="res://scripts/window/window_drag.gd" id="3_vkrt5"]
[ext_resource type="Script" path="res://scripts/leftMenu/listbutton.gd" id="5_nka02"]
[ext_resource type="Script" path="res://scripts/contentMenu/contentMenuManager.gd" id="6_x56fd"]
[ext_resource type="Texture2D" uid="uid://bf6xcferbtpdx" path="res://others/Icons/min nomal.png" id="7_bradq"]
[ext_resource type="Texture2D" uid="uid://b520httfm6dvc" path="res://others/Icons/min.png" id="8_3gpoh"]
[ext_resource type="Script" path="res://scripts/setting/setting.gd" id="8_khf3f"]
[ext_resource type="Texture2D" uid="uid://dtj35xohop4d1" path="res://others/Icons/max nomal.png" id="9_0abu6"]
[ext_resource type="Texture2D" uid="uid://dy1xxeb7fv8jp" path="res://others/Icons/max.png" id="10_m0uv3"]
[ext_resource type="Texture2D" uid="uid://ceqf7jcm8vwmr" path="res://others/Icons/disabled.png" id="12_wwjng"]
[ext_resource type="Texture2D" uid="uid://ddlo17wowlyle" path="res://others/Icons/close.png" id="16_phy16"]
[ext_resource type="Texture2D" uid="uid://b5h4xv4c3010s" path="res://others/Icons/close nomal.png" id="16_qd1bo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cjptp"]
texture = ExtResource("16_qd1bo")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dc85w"]
texture = ExtResource("16_phy16")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a8swn"]
texture = ExtResource("16_qd1bo")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bxj57"]
texture = ExtResource("12_wwjng")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tgyfy"]
texture = ExtResource("7_bradq")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4depu"]
texture = ExtResource("8_3gpoh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wna6e"]
texture = ExtResource("7_bradq")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b5dd6"]
texture = ExtResource("9_0abu6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vy1wu"]
texture = ExtResource("10_m0uv3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c7wrm"]
texture = ExtResource("9_0abu6")

[node name="main" type="Control"]
show_behind_parent = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_bm743")
script = ExtResource("2_411ek")

[node name="background" type="Panel" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_bm743")

[node name="temporarily" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="todoItemArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 170.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_0nue1")

[node name="todoItemAreaGrid" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 170.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
columns = 3
script = ExtResource("2_0nue1")

[node name="contentMenuManager" type="Control" parent="."]
anchors_preset = 0
script = ExtResource("6_x56fd")

[node name="leftMenu" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 160.0
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_rxhw4")
script = ExtResource("3_7p4oc")
group = ExtResource("3_ut62r")

[node name="appName" type="Label" parent="leftMenu"]
layout_mode = 0
offset_left = 15.0
offset_top = 30.0
offset_right = 145.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 36
text = "STodo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="expired" type="Button" parent="leftMenu"]
layout_mode = 0
offset_left = 15.0
offset_top = 120.0
offset_right = 145.0
offset_bottom = 150.0
pivot_offset = Vector2(65, 15)
focus_mode = 0
theme = ExtResource("2_bm743")
toggle_mode = true
button_group = ExtResource("3_ut62r")
text = "Expired"
script = ExtResource("5_nka02")

[node name="today" type="Button" parent="leftMenu"]
layout_mode = 0
offset_left = 15.0
offset_top = 170.0
offset_right = 145.0
offset_bottom = 200.0
pivot_offset = Vector2(65, 15)
focus_mode = 0
theme = ExtResource("2_bm743")
toggle_mode = true
button_group = ExtResource("3_ut62r")
text = "Today"
script = ExtResource("5_nka02")

[node name="tomorrow" type="Button" parent="leftMenu"]
layout_mode = 0
offset_left = 15.0
offset_top = 220.0
offset_right = 145.0
offset_bottom = 250.0
pivot_offset = Vector2(65, 15)
focus_mode = 0
theme = ExtResource("2_bm743")
toggle_mode = true
button_group = ExtResource("3_ut62r")
text = "Tomorrow"
script = ExtResource("5_nka02")

[node name="week" type="Button" parent="leftMenu"]
layout_mode = 0
offset_left = 15.0
offset_top = 270.0
offset_right = 145.0
offset_bottom = 300.0
pivot_offset = Vector2(65, 15)
focus_mode = 0
theme = ExtResource("2_bm743")
toggle_mode = true
button_group = ExtResource("3_ut62r")
text = "Week"
script = ExtResource("5_nka02")

[node name="setting" type="Button" parent="leftMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.0
offset_top = -50.0
offset_right = 65.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(65, 15)
focus_mode = 0
theme = ExtResource("2_bm743")
toggle_mode = true
button_group = ExtResource("3_ut62r")
text = "Setting"
script = ExtResource("8_khf3f")

[node name="windowState" type="Button" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
focus_mode = 0
flat = true
script = ExtResource("3_vkrt5")

[node name="quit" type="Button" parent="windowState"]
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 19.0
offset_bottom = 19.0
theme_override_styles/normal = SubResource("StyleBoxTexture_cjptp")
theme_override_styles/hover = SubResource("StyleBoxTexture_dc85w")
theme_override_styles/pressed = SubResource("StyleBoxTexture_a8swn")
theme_override_styles/disabled = SubResource("StyleBoxTexture_bxj57")
script = ExtResource("3_qwv7e")

[node name="min" type="Button" parent="windowState"]
layout_mode = 0
offset_left = 26.0
offset_top = 6.0
offset_right = 39.0
offset_bottom = 19.0
theme_override_styles/normal = SubResource("StyleBoxTexture_tgyfy")
theme_override_styles/hover = SubResource("StyleBoxTexture_4depu")
theme_override_styles/pressed = SubResource("StyleBoxTexture_wna6e")
theme_override_styles/disabled = SubResource("StyleBoxTexture_bxj57")
script = ExtResource("3_qwv7e")

[node name="max" type="Button" parent="windowState"]
layout_mode = 0
offset_left = 46.0
offset_top = 6.0
offset_right = 59.0
offset_bottom = 19.0
theme_override_styles/normal = SubResource("StyleBoxTexture_b5dd6")
theme_override_styles/hover = SubResource("StyleBoxTexture_vy1wu")
theme_override_styles/pressed = SubResource("StyleBoxTexture_c7wrm")
theme_override_styles/disabled = SubResource("StyleBoxTexture_bxj57")
script = ExtResource("3_qwv7e")
